refactor: uppercase some auth handler structs
